2008-11-14  Robert Bragg  <ebassi@linux.intel.com>
	
	* tests/interactive/Makefile.am
	* tests/interactive/test-pixmap.c:
	test-pixmap + test-devices accidentally got dropped from the makefiles
	when changing the unit test layout; this puts them back.

2008-11-14  Emmanuele Bassi  <ebassi@linux.intel.com>

	Bug 1265 - ClutterScore doesn't emit 'started' signal (Bastian
	Winkler)

	* clutter/clutter-score.c: Emit the ::started signal.

	* tests/interactive/test-score.c: Check the emission of the
	Score signals.

2008-11-13  Neil Roberts  <neil@linux.intel.com>

	* clutter/cogl/gles/cogl-gles2-wrapper.h:
	* clutter/cogl/gles/cogl-gles2-wrapper.c:
	Initialise the 'tex' sampler uniform to 0. The GLSL spec
	specifically says that you must initialize sampler uniforms. This
	fixes texturing for GLES 2 when using the PowerVR simulator via
	software Mesa.

2008-11-13  Robert Bragg  <robert@linux.intel.com>

	Gets the mesh API working with GLES2

	* clutter/cogl/common/cogl-mesh.c:
	Make sure we use the appropriate cogl_wrap_gl* funcs as appropriate

	* clutter/cogl/gles/cogl-gles2-wrapper.c
	* clutter/cogl/gles/cogl-gles2-wrapper.h:
	In our glColorPointer wrapper we needed to mark our color attribute
	as normalized.

	* tests/conform/Makefile.am:
	When creating unit test symlinks we use the -l gtester option to
	list tests, but when using the PVR SDK the test binary also spews
	out some extra info that caused lots of random symlinks to be
	created. We now grep for lines starting with a '/'

	* tests/conform/test-mesh-contiguous.c
	* tests/conform/test-mesh-mutability.c:
	Use cogl_set_source_color instead of directly calling glColor4ub

2008-11-13  Neil Roberts  <neil@linux.intel.com>

	* clutter/clutter-actor.c (clutter_actor_get_paint_visibility):
	Fix logic so that it won't return TRUE for a hidden stage.

2008-11-13  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-behaviour-ellipse.c:
	(clutter_behaviour_ellipse_applied): Do not reset the depth