@@ -1,3 +1,12 @@
+2008-11-17  Emmanuele Bassi  <ebassi@linux.intel.com>
+
+	* clutter/clutter-entry.c:
+	* clutter/clutter-label.c:
+	* clutter/clutter-rectangle.c:
+	* clutter/clutter-script.c:
+	* clutter/clutter-stage.c: Use the ParamSpecColor and GValue
+	API for ClutterColor-based properties.
+
 2008-11-14  Robert Bragg  <ebassi@linux.intel.com>
 	
 	* tests/interactive/Makefile.am
